--- a/src/templates/admin/blog/list.html.twig
+++ b/src/templates/admin/blog/list.html.twig
@@ -1,7 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/layout/default.html.twig' %}
 
-{% block title %}Hello BlogController!{% endblock %}
+{% block title %}Admin - Blog{% endblock %}
 
-{% block body %}
-     Blog admin
+{% block content %}
+    <h1>Blog</h1>
 {% endblock %}
