--- a/src/templates/front/blog/list.html.twig
+++ b/src/templates/front/blog/list.html.twig
@@ -1,7 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'front/layout/default.html.twig' %}
 
-{% block title %}Hello BlogController!{% endblock %}
+{% block title %}Blog{% endblock %}
 
 {% block body %}
-     Homepage
+     <h1>Homepage</h1>
 {% endblock %}
