--- a/src/assets/scss/front.scss
+++ b/src/assets/scss/front.scss
@@ -5,3 +5,5 @@
 @import '~bootstrap/scss/reboot';
 @import '~bootstrap/scss/type';
 @import '~bootstrap/scss/grid';
+@import '~bootstrap/scss/utilities/text';
+@import '~bootstrap/scss/utilities/spacing';
