--- a/src/templates/front/blog/list.html.twig
+++ b/src/templates/front/blog/list.html.twig
@@ -2,6 +2,24 @@
 
 {% block title %}Blog{% endblock %}
 
-{% block body %}
-     <h1>Homepage</h1>
+{% block content %}
+    <h1>Blog</h1>
+    {# blog \App\Entity\Blog #}
+    {% for blog in blogs %}
+        {% set detailUrl = '#' %}
+        <h2><a href="{{ detailUrl }}">{{ blog.title }}</a></h2>
+        <p class="text-muted">{{ blog.date|date }}</p>
+    {% endfor %}
+    <div class="row mt-5">
+        <div class="col">
+            {% if blogs.hasPreviousPage %}
+                <a href="{{ path('front_blog_list', { page: blogs.previousPage}) }}">&#171; Newer posts</a>
+            {% endif %}
+        </div>
+        <div class="col text-right">
+            {% if blogs.hasNextPage %}
+                <a href="{{ path('front_blog_list', { page: blogs.nextPage}) }}">Older posts &#187;</a>
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
