--- a/src/templates/front/layout/default.html.twig
+++ b/src/templates/front/layout/default.html.twig
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Blog{% endblock %}</title>
-        {% block stylesheets %}<link rel="stylesheet" href="{{ asset('front.css') }}">{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}
-            <script src="{{ asset('runtime.js') }}"></script>
-            <script src="{{ asset('front.js') }}"></script>
-        {% endblock %}
-    </body>
-</html>
+{% extends 'front/layout/base.html.twig' %}
+
+{% block body %}
+    <main class="container pt-5">
+        {% block content %}{% endblock %}
+    </main>
+{% endblock %}
