Blog renamed to Post

--- a/src/templates/admin/layout/default.html.twig
+++ b/src/templates/admin/layout/default.html.twig
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="topbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('admin_blog_list') }}">Blog</a>
+                    <a class="nav-link" href="{{ path('admin_post_list') }}">Post</a>
                 </li>
             </ul>
             <div class="dropdown float-right nav-item">
