--- a/src/templates/front/layout/base.html.twig
+++ b/src/templates/front/layout/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Blog{% endblock %}</title>
+        <title>{% block title %}Post{% endblock %}</title>
         {% block stylesheets %}<link rel="stylesheet" href="{{ asset('front.css') }}">{% endblock %}
     </head>
     <body>
